--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ body {
     background-repeat: no-repeat;
     background-size: max(1200px, 100vw);
     position: relative;
-
-
 }
 
 .main .box {
@@ -78,15 +76,15 @@ nav {
 .text> :first-child,
 .fifth h2 {
     font-family: 'Poppins', sans-serif;
-    
+
     font-size: 48px;
     font-weight: 900;
     color: white;
-    
+
 }
-    
-    
-    @media screen and (max-width:1410px) {
+
+
+@media screen and (max-width:1410px) {
 
     .main-text> :first-child,
     .text> :first-child,
@@ -201,6 +199,18 @@ input::placeholder {
     .fourth {
         flex-wrap: wrap;
     }
+
+    .first-order {
+        order: 1;
+
+    }
+
+    .sec-order {
+        order: 2;
+
+
+    }
+
     /* .second,.fourth{
         flex-direction: column-reverse;
     } */
@@ -243,6 +253,9 @@ input::placeholder {
     position: relative;
 }
 
+
+
+
 .tv-video {
     position: absolute;
     right: 24px;
@@ -260,7 +273,6 @@ input::placeholder {
     }
 }
 
-
 .tv-video2 {
     position: absolute;
     width: 354px;
@@ -274,6 +286,7 @@ input::placeholder {
 
         font-size: 18px;
     }
+
     nav {
         max-width: 100%;
         display: flex;
@@ -281,9 +294,9 @@ input::placeholder {
         justify-content: space-around;
         align-items: center;
         height: 90px;
-        gap: 43px 
-    
+        gap: 43px
     }
+
     .tv-video2 {
         position: absolute;
         width: 166px;
@@ -419,7 +432,7 @@ footer>span {
 }
 
 @media screen and (max-width: 459px) {
-   
+
 
     .main {
         background-size: cover;
